--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ spacy
 tensorflow
 nltk
 pyresparser
-en-core-web-sm==2.3.1
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz --no-deps
